<resources>
    <string name="app_name">PostAlong</string>
    <string name="app_name_version">PostAlong v1.0</string>
    <string name="app_index_SEND">SEND</string>
    <string name="app_index_ORDER">ORDER</string>
    <string name="app_index_DELIVER">DELIVER</string>
    <string name="app_index_TRIP">TRIP</string>
    <string name="app_index_WALLET">WALLET</string>
    <string name="p_title_shibing">士兵</string>
    <string name="p_title_junshi">军士</string>
    <string name="p_title_shaowei">少尉</string>
    <string name="p_title_zhongwei">中尉</string>
    <string name="p_title_shangwei">上尉</string>
    <string name="p_title_shaoxiao">少校</string>
    <string name="p_title_zhongxiao">中校</string>
    <string name="order_bargain">Bargaining</string>
    <string name="order_waiting_payment">Payment</string>
    <string name="order_be_being">In order</string>
    <string name="order_not_take_goods">claim goods</string>
    <string name="order_take_goods">Take goods</string>
    <string name="order_not_sign">Not sign</string>
    <string name="order_no_evaluation">No evaluation</string>
    <string name="order_completed">Completed</string>
    <string name="order_cancel">Cancel</string>
    <string name="order_none">none</string>
    <string name="order_bargain_time">bargain</string>
    <string name="order_receive_time">receive</string>
    <string name="order_release_time">release</string>
    <string name="order_pay_time">pay</string>
    <string name="order_get_time">get</string>
    <string name="order_sign_in_time">sign in</string>
    <string name="order_comment_time">comment</string>
    <string name="order_cancel_time">cancel</string>
    <string name="order_none_time">none</string>
    <string name="coment_tip_repeat">You have comments, can\'t comment again</string>
    <string name="coment_tip_error">I\'m sorry, but comments failed!</string>
    <string name="coment_tip_success">Congratulations, comment on success!</string>
    <string name="coment_tip_empty">Fill in the comments information!</string>
    <string name="common_next_step">Next Step</string>
    <string name="common_submit">submit</string>
    <string name="common_edit">edit</string>
    <string name="common_remove">remove</string>
    <string name="common_ok">Ok</string>
    <string name="common_later">Later</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_save_success">Save success</string>
    <string name="common_save_fail">Save fail</string>
    <string name="common_location_tip">Unable to get the current location information, whether to try again?</string>
    <string name="common_order_payment">Order payment</string>
    <string name="common_order_payment_money">Please enter the amount</string>
    <string name="common_order_payment_money_format">Please input the correct value of money</string>
    <string name="common_tip_format_error">After the request data format is wrong, please make sure the operation</string>
    <string name="common_tip_system_error">System error, please try again later</string>
    <string name="common_tip_system_busy">System is busy, please try again later</string>
    <string name="common_tip_no_data">Sorry, no data now</string>
    <string name="common_tip_no_more_data">No more data</string>
    <string name="common_tip_order_validation">The order in the validation</string>
    <string name="common_tip_no_network">Not connected to the Internet, please visit again after connection</string>
    <string name="common_tip_network_timeout">Dear users, the network connection timeout, please check whether the network is available</string>
    <string name="common_tip_press_again_exit">Again according to exit the program</string>
    <string name="common_tip_title">Prompt</string>
    <string name="common_tip_loading">loading…</string>
    <string name="common_tip_uploading">Are uploading</string>
    <string name="common_tip_already_submit">You have submitted</string>
    <string name="common_tip_submit">Is submitted</string>
    <string name="common_tip_draft_save_fail">The draft order save failed！</string>
    <string name="common_tip_draft_save_success">The draft order is saved successfully！</string>
    <string name="common_tip_input_words">can accommodate %d words</string>
    <string name="common_tip_submiting">Under submission!</string>
    <string name="common_tip_sorry">Sorry</string>
    <string name="common_tip_back_to_previous">返回上一页</string>
    <string name="login_password_error">Password error, please enter again</string>
    <string name="common_dialog_warning">Warning</string>
    <string name="common_dialog_warning_prompt">Warm prompt</string>
    <string name="common_dialog_warning_content">Please wait, is processing</string>
    <string name="common_tip_login_first">please login first!</string>
    <string name="common_tip_network_error">I\'m sorry, the network error, please check the network</string>
    <string name="common_dialog_phone_tip">Determine the dial?</string>
    <string name="common_dialog_msg_tip">Sure send messages?</string>
    <string name="common_dialog_unable_open_tip">Unable to open the phone interface</string>
    <string name="common_dialog_unable_open_msg_tip">Unable to open the message interface</string>
    <string name="new_message_tip">Dear customer, you have a new message!</string>
    <string name="activity_message_tip">activity message</string>
    <string name="system_message_tip">system message</string>
    <string name="private_letter_tip">private message</string>
    <string name="order_message_tip">order message</string>
    <string name="message_delete_tip">Are you sure to delete this message!</string>
    <string name="current_version">current version:</string>
    <string name="preview_picture_tip">Preview picture</string>
    <string name="picture_tip">Picture</string>
    <string name="picture_delete_tip">Delete picture</string>
    <string name="picture_delete_confirm_tip">Sure you want to delete this image?</string>
    <string name="picture_not_support_image">Can\'t support image</string>
    <string name="picture_limit_tip">Can only choose at most</string>
    <string name="picture_limit_unit_tip">spread</string>
    <string name="picture_confirm_tip">Confirm</string>
    <string name="preview_picture_confirm_tip">Preview</string>
    <string name="complete_picture_confirm_tip">Complete</string>
    <string name="all_picture">All images</string>
    <string name="comment_bad">bad</string>
    <string name="comment_general">general</string>
    <string name="comment_satisfaction">satisfaction</string>
    <string name="comment_very">very</string>
    <string name="comment_very_well">very well</string>
    <string name="location_service">Position location services</string>
    <string name="location_service_tip">You currently don\'t open the GPS, open to program to obtain a more accurate position?</string>
    <string name="location_service_no_tip">Unable to get the current location information, please try again!</string>
    <string name="location_service_current_no_tip">The current center address is unavailable</string>
    <string name="download_fail">download failed</string>
    <string name="download_success">download success</string>
    <string name="download_cancel">you have canceled</string>
    <string name="version_is_up_to_date">您使用的已经是最新版</string>
    <string name="common_btn_back_to_main">index</string>
    <string name="common_btn_view_order">detail</string>
    <string name="common_btn_call_him">call him</string>
    <string name="common_btn_view_withdraw">withdraw</string>
    <string name="common_lack_withdraw">Lack of balance</string>
    <string name="common_btn_recharge">recharge</string>
    <string name="btn_order_mark_up">mark up</string>
    <string name="btn_order_collect">collect</string>
    <string name="action_settings">settings</string>
    <string name="action_message">message</string>
    <string name="action_delete">delete</string>
    <string name="gender_male">male</string>
    <string name="gender_female">female</string>
    <string name="order_status_release">release</string>
    <string name="order_status_bargain">bargain</string>
    <string name="order_status_not_pay">not pay</string>
    <string name="order_status_pay">pay</string>
    <string name="order_status_pickup">pick up</string>
    <string name="order_status_transport">transport</string>
    <string name="order_status_not_comment">not comment</string>
    <string name="order_status_comment">comment</string>
    <string name="order_status_cancel">cancel</string>
    <string name="order_status_success">success</string>
    <string name="tv_register_account"><u>register an account</u></string>
    <string name="tv_forget_pwd"><u>forget the password</u></string>
    <string name="drawer_open">Open the drawer</string>
    <string name="drawer_close">Close the drawer</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="setting_version">version updating</string>
    <string name="setting_welcome"> welcome page</string>
    <string name="setting_telephone">contact number</string>
    <string name="setting_website">official website</string>
    <string name="setting_wechat">WeChat</string>
    <string name="setting_weibo">microblog</string>
    <string name="setting_service_phone">Customer Service Phone</string>
    <string name="setting_phone_number">400-000-0000</string>
    <string name="setting_click_to_update">click to update</string>
    <string name="setting_new_version">The latest version</string>
    <string name="setting_tips_dialog_cache">Whether to clear the cache</string>
    <string name="setting_tips_quit_dialog_title">Exit the system prompt</string>
    <string name="setting_tips_toast_quit_ok">Exit the success</string>
    <string name="setting_tips_toast_cache">Clear the cache success</string>
    <string name="setting_tips_quit_dialog_content">Pro, are you sure you log out?</string>
    <string name="setting_label_sound">Sound</string>
    <string name="setting_label_vibrate">Vibrate</string>
    <string name="setting_label_push_message">Push message</string>
    <string name="setting_label_cache">Clear cache</string>
    <string name="setting_label_about">About zthd</string>
    <string name="setting_btn_logout">Log out</string>
    <string name="menu_my_wallet">my wallet</string>
    <string name="success_recharge_title">Recharge success</string>
    <string name="success_release_order_title">Release success</string>
    <string name="success_release_order_content">your order has been created, please wait.</string>
    <string name="success_withdraw_title">Withdrawal success</string>
    <string name="success_withdraw_content">Dear customer, hello!Withdraw operation has been successful, withdrawal amount is audit process, please be patient.</string>
    <string name="order_list_published">published</string>
    <string name="order_list_transporting">transporting</string>
    <string name="order_list_success">success</string>
    <string name="order_list_cancel">cancel</string>
    <string name="order_list_all">all order</string>
    <string name="reason_cancel_1">Not satisfied with the single</string>
    <string name="reason_cancel_2">Free delivery person long time did not order</string>
    <string name="reason_cancel_3">Fill in error to send information</string>
    <string name="reason_cancel_4">Don\'t want to</string>
    <string name="btn_order_pay">pay</string>
    <string name="pay_total">Total</string>
    <string name="pay_order_name">Order</string>
    <string name="pay_use_coupon">Use Coupon</string>
    <string name="pay_use_wallet">Use Wallet</string>
    <string name="pay_use">Use</string>
    <string name="pay_go_to_paypal_page">go to paypal page</string>
    <string name="pay_you_have">The wallet balance</string>
</resources>