<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <LinearLayout
        style="@style/ll_success">

        <ImageView
            style="@style/iv_success_ok"/>

        <TextView
            style="@style/tv_success_title"
            android:text="@string/success_release_order_title" />

        <TextView
            style="@style/tv_success_content"
            android:text="@string/success_release_order_content"/>
    </LinearLayout>

    <LinearLayout style="@style/ll_btn_bottom_common">

        <View style="@style/h_line" />

        <LinearLayout
            style="@style/ll_btn_bottom_common_inner"
            android:orientation="horizontal">

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/btn_back"
                style="@style/ripple_btn_bottom_double.left">

                <TextView
                    style="@style/tv_btn_bottom_blue_common"
                    android:text="@string/common_btn_back_to_main" />
            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/btn_show_order_detail"
                style="@style/ripple_btn_bottom_double.right.blue">

                <TextView
                    style="@style/tv_btn_bottom_blue_common"
                    android:text="@string/common_btn_view_order" />
            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
