<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_8"
    android:layout_marginRight="@dimen/dp_8"
    android:orientation="vertical">

    <include layout="@layout/include_my_order_popup_line" />

    <LinearLayout
        android:id="@+id/tv_send_all"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/bg_popupwindow_my_order">

        <TextView
            style="@style/tv_my_order_popup"
            android:text="@string/order_list_all" />
    </LinearLayout>

    <include layout="@layout/include_my_order_popup_line" />

    <LinearLayout
        android:id="@+id/tv_send_published"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/bg_popupwindow_my_order">

        <TextView
            style="@style/tv_my_order_popup"
            android:layout_marginLeft="@dimen/dp_48"
            android:layout_marginRight="@dimen/dp_48"
            android:text="@string/order_list_published" />
    </LinearLayout>

    <include layout="@layout/include_my_order_popup_line" />

    <LinearLayout
        android:id="@+id/tv_send_trans"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/bg_popupwindow_my_order">

        <TextView
            style="@style/tv_my_order_popup"
            android:text="@string/order_list_transporting" />
    </LinearLayout>

    <include layout="@layout/include_my_order_popup_line" />

    <LinearLayout
        android:id="@+id/tv_send_success"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/bg_popupwindow_my_order">

        <TextView
            style="@style/tv_my_order_popup"
            android:text="@string/order_list_success" />
    </LinearLayout>

    <include layout="@layout/include_my_order_popup_line" />

    <LinearLayout
        android:id="@+id/tv_send_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/bg_popupwindow_my_order">

        <TextView
            style="@style/tv_my_order_popup"
            android:text="@string/order_list_cancel" />
    </LinearLayout>

</LinearLayout>