<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey_F7F7F7"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_wrap_border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_grey_F7F7F7">

            <RelativeLayout
                android:id="@+id/describe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tv_app_name_and_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/app_name" />
            </RelativeLayout>
        </LinearLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/rl_version"
            style="@style/ripple_common"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@string/setting_version"
                    android:textSize="@dimen/text_size_15" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_20"
                    android:text="@string/setting_click_to_update"
                    android:textSize="@dimen/text_size_15" />
            </RelativeLayout>
        </com.balysv.materialripple.MaterialRippleLayout>

        <View
            style="@style/h_line"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/rl_phone"
            style="@style/ripple_common"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@string/setting_telephone"
                    android:textSize="@dimen/text_size_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_20"
                    android:text="@string/setting_phone_number"
                    android:textSize="@dimen/text_size_15" />
            </RelativeLayout>
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</LinearLayout>
